# spuring

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  dev-requirements.txt  mkdocs.yml  pyproject.toml  requirements.txt
docs/: index.md
spuring/: __init__.py  __main__.py  creation.py  main.py  template.py
spuring/scripts/: pip.py  venv.py
spuring/templates/: base.toml  default.toml  flask.toml  vscode.toml
test/: TestCreation.py  TestMain.py  TestTemplate.py  TestTemplate.toml
