[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spuring"
authors = [
    {name = "Tobias Baumgarten", email = "Tobias.b.baumgarten@gmail.com"},
]
description = "Create a project folder. It can be self configurated"
readme = "README.md"
requires-python = ">=3.7"
version = "0.0.2"
dependencies = [
    "Jinja2==3.1.2"
]